Fix Kapa modal button on dark mode for mobile

--- a/docusaurus/src/scss/kapa.scss
+++ b/docusaurus/src/scss/kapa.scss
@@ -191,8 +191,8 @@
   }
 
   // Buttons
-
-  .mantine-Button-root {
+  .mantine-Button-root,
+  .mantine-UnstyledButton-root {
     background-color: var(--strapi-neutral-0) !important;
 
     &:hover {
